Starting with just dashboard. Got all to compile.
Used ngc -p tsconfig.aot.json to get everything to at least compile through angular compiler cli.

--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -30,7 +30,8 @@
     "dist"
   ],
   "files": [
-    "src/app/app.module.ts"  
+    "src/custom-typings.d.ts",
+    "src/app/app.module.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
