--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "homepage": "http://akveo.github.io/ng2-admin/",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.1.1",
-    "@angular/compiler": "2.1.1",
-    "@angular/core": "2.1.1",
-    "@angular/forms": "2.1.1",
-    "@angular/http": "2.1.1",
-    "@angular/platform-browser": "2.1.1",
-    "@angular/platform-browser-dynamic": "2.1.1",
-    "@angular/platform-server": "2.1.1",
-    "@angular/router": "3.1.1",
+    "@angular/common": "2.1.2",
+    "@angular/compiler": "2.1.2",
+    "@angular/core": "2.1.2",
+    "@angular/forms": "2.1.2",
+    "@angular/http": "2.1.2",
+    "@angular/platform-browser": "2.1.2",
+    "@angular/platform-browser-dynamic": "2.1.2",
+    "@angular/platform-server": "2.1.2",
+    "@angular/router": "3.1.2",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
@@ -45,7 +45,7 @@
     "lodash": "^4.12.0",
     "ng2-bootstrap": "1.1.14",
     "ng2-ckeditor": "1.0.7",
-    "ng2-smart-table": "^0.3.2",
+    "ng2-smart-table": "0.4.0-3",
     "ng2-tree": "^0.0.2-7",
     "ng2-uploader": "1.1.0",
     "normalize.css": "^4.1.1",
