--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angularclass/hmr-loader": "~3.0.2",
     "amcharts3": "github:amcharts/amcharts3",
     "ammap3": "github:amcharts/ammap3",
+    "angular2-router-loader": "^0.3.3",
     "animate.css": "^3.5.1",
     "assets-webpack-plugin": "^3.4.0",
     "bootstrap": "4.0.0-alpha.4",
@@ -45,7 +46,7 @@
     "lodash": "^4.12.0",
     "ng2-bootstrap": "1.1.14",
     "ng2-ckeditor": "1.0.7",
-    "ng2-smart-table": "0.4.0-3",
+    "ng2-smart-table": "^0.3.2",
     "ng2-tree": "^0.0.2-7",
     "ng2-uploader": "1.1.0",
     "normalize.css": "^4.1.1",
@@ -55,57 +56,55 @@
     "zone.js": "~0.6.23"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.1.1",
-    "@ngtools/webpack": "^1.1.4",
+    "angular2-template-loader": "^0.5.0",
     "@types/electron": "^1.3.20",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
-    "@types/lodash": "0.0.28",
     "@types/node": "^6.0.38",
     "@types/source-map": "^0.1.27",
     "@types/uglify-js": "^2.0.27",
     "@types/webpack": "^1.12.34",
-    "angular2-template-loader": "^0.5.0",
-    "awesome-typescript-loader": "^2.2.1",
+    "@types/lodash": "0.0.28",
+    "gh-pages": "^0.11.0",
+    "parse5": "^2.2.2",
+    "rimraf": "^2.5.2",
+    "script-ext-html-webpack-plugin": "^1.3.2",
     "codelyzer": "~1.0.0-beta.2",
-    "compression-webpack-plugin": "^0.3.1",
-    "copy-webpack-plugin": "^3.0.1",
+    "tslint": "3.15.1",
+    "ts-helpers": "1.1.2",
+    "ts-node": "^1.3.0",
+    "typedoc": "^0.5.0",
+    "typescript": "2.0.3",
+    "awesome-typescript-loader": "^2.2.1",
+    "tslint-loader": "^2.1.3",
+    "url-loader": "^0.5.7",
+    "style-loader": "^0.13.1",
+    "raw-loader": "0.5.1",
+    "source-map-loader": "^0.1.5",
+    "string-replace-loader": "1.0.5",
+    "imports-loader": "^0.6.5",
+    "json-loader": "^0.5.4",
     "css-loader": "^0.25.0",
-    "electron": "^1.4.0",
-    "es6-promise": "^3.1.2",
-    "es6-shim": "^0.35.0",
-    "es7-reflect-metadata": "^1.6.0",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
-    "gh-pages": "^0.11.0",
-    "html-webpack-plugin": "^2.21.0",
-    "imports-loader": "^0.6.5",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.5.3",
-    "parse5": "^2.2.2",
-    "raw-loader": "0.5.1",
-    "resolve-url-loader": "^1.4.3",
-    "rimraf": "^2.5.2",
-    "sass-loader": "^4.0.2",
-    "script-ext-html-webpack-plugin": "^1.3.2",
-    "source-map-loader": "^0.1.5",
-    "string-replace-loader": "1.0.5",
-    "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
-    "ts-helpers": "1.1.2",
-    "ts-node": "^1.3.0",
-    "tslint": "3.15.1",
-    "tslint-loader": "^2.1.3",
-    "typedoc": "^0.5.0",
-    "typescript": "2.0.3",
-    "url-loader": "^0.5.7",
+    "sass-loader": "^4.0.2",
+    "resolve-url-loader": "^1.4.3",
+    "node-sass": "^3.5.3",
+    "html-webpack-plugin": "^2.21.0",
+    "copy-webpack-plugin": "^3.0.1",
     "webpack": "2.1.0-beta.25",
     "webpack-dashboard": "^0.1.8",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.1.0-beta.9",
     "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^0.15.0"
+    "webpack-merge": "^0.15.0",
+    "compression-webpack-plugin": "^0.3.1",
+    "es6-promise": "^3.1.2",
+    "es6-shim": "^0.35.0",
+    "es7-reflect-metadata": "^1.6.0",
+    "electron": "^1.4.0"
   },
   "scripts": {
     "rimraf": "rimraf",
