More changes for AOT in dashboard.

--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -31,7 +31,8 @@
   ],
   "files": [
     "src/custom-typings.d.ts",
-    "src/app/app.module.ts"
+    "src/app/app.module.ts",
+    "src/app/pages/dashboard/dashboard.module.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
