AOT for UI module.

--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -32,7 +32,8 @@
   "files": [
     "src/custom-typings.d.ts",
     "src/app/app.module.ts",
-    "src/app/pages/dashboard/dashboard.module.ts"
+    "src/app/pages/dashboard/dashboard.module.ts",
+    "src/app/pages/ui/ui.module.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
