--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -34,7 +34,8 @@
     "src/app/app.module.ts",
     "src/app/pages/dashboard/dashboard.module.ts",
     "src/app/pages/ui/ui.module.ts",
-    "src/app/pages/forms/forms.module.ts"
+    "src/app/pages/forms/forms.module.ts",
+    "src/app/pages/charts/charts.module.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
