Maps.module AOT support.

--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -35,7 +35,8 @@
     "src/app/pages/dashboard/dashboard.module.ts",
     "src/app/pages/ui/ui.module.ts",
     "src/app/pages/forms/forms.module.ts",
-    "src/app/pages/charts/charts.module.ts"
+    "src/app/pages/charts/charts.module.ts",
+    "src/app/pages/maps/maps.module.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
