--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -36,7 +36,9 @@
     "src/app/pages/ui/ui.module.ts",
     "src/app/pages/forms/forms.module.ts",
     "src/app/pages/charts/charts.module.ts",
-    "src/app/pages/maps/maps.module.ts"
+    "src/app/pages/maps/maps.module.ts",
+    "src/app/pages/register/register.module.ts",
+    "src/app/pages/login/login.module.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
