--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "leaflet-map": "^0.2.1",
     "lodash": "^4.12.0",
     "ng2-bootstrap": "1.1.14",
-    "ng2-ckeditor": "1.0.7",
+    "ng2-ckeditor": "1.1.4",
     "ng2-smart-table": "^0.3.2",
     "ng2-tree": "^0.0.2-7",
     "ng2-uploader": "1.1.0",
     "normalize.css": "^4.1.1",
     "postcss-loader": "^1.0.0",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.0-rc.3",
     "tether": "^1.2.4",
     "zone.js": "~0.6.23"
   },
@@ -66,6 +66,7 @@
     "@types/source-map": "^0.1.27",
     "@types/uglify-js": "^2.0.27",
     "@types/webpack": "^1.12.34",
+    "@types/chai": "3.4.34",
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^2.2.1",
     "codelyzer": "~1.0.0-beta.2",
