--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -38,7 +38,8 @@
     "src/app/pages/charts/charts.module.ts",
     "src/app/pages/maps/maps.module.ts",
     "src/app/pages/register/register.module.ts",
-    "src/app/pages/login/login.module.ts"
+    "src/app/pages/login/login.module.ts",
+    "src/app/pages/editors/editors.module.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
