--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "homepage": "http://akveo.github.io/ng2-admin/",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/platform-server": "2.1.2",
-    "@angular/router": "3.1.2",
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/platform-server": "2.2.1",
+    "@angular/router": "3.2.1",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
@@ -56,8 +56,8 @@
     "zone.js": "~0.6.23"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.1.2",
-    "@ngtools/webpack": "^1.1.4",
+    "@angular/compiler-cli": "2.2.1",
+    "@ngtools/webpack": "1.1.4",
     "@types/electron": "^1.3.20",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
@@ -100,7 +100,7 @@
     "tslint": "3.15.1",
     "tslint-loader": "^2.1.3",
     "typedoc": "^0.5.0",
-    "typescript": "2.0.3",
+    "typescript": "2.0.10",
     "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.25",
     "webpack-dashboard": "^0.1.8",
